API specs and usage updates (#325)
* matching using http params

* fixed matching definition

* changed base url to /v1

* changed credentials test url

* harmonizing 204

* move /users/xxx/keys to /users/xxx/keys/ for consistency

* harmonizing response codes

* fixes to spec: trailing slashes and retcodes, added missing /users/xxx/keys/fingerprint and /users/xxx/password

* fixed oauth defs

* patch task now returns 204

* factorized queries

* minor hints
